[tool.poetry]
name = "replit-keep-alive"
version = "1.0.0"
description = "Replit Keep Alive is a Python script wrapper meant to, with the help of UptimeRobot, keep Replit from terminating the bot when the browser tab is closed."
authors = ["erickyeagle <51383074+erickyeagle@users.noreply.github.com>"]
license = "GNU General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.5"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
